--- a/stylesheet.css
+++ b/stylesheet.css
@@ -90,7 +90,7 @@ nav ul li a {
       display: flex;
       justify-content: space-around;
       align-items: center;
-      padding: 90px 170px;
+      padding: 90px 120px;
     }
 
     .leftSection {
@@ -105,11 +105,14 @@ nav ul li a {
       color:#7f00ff;
     }
 
-    .rightSection img {
-      width: 90%;
-      max-width: 400px;
-      border-radius: 50%;
-    }
+.rightSection img {
+  width: 100%;
+  max-width: 400px;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;   
+  border-radius: 50%;
+  display: block;
+}
 
     /* About Section */
     .second {
